--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "@uniswap/swap-router-contracts",
-  "description": "Smart contracts for swapping on Uniswap V2 and V3",
+  "name": "@basex-fi/swap-router-contracts",
+  "description": "Smart contracts for swapping on BaseX",
   "license": "GPL-2.0-or-later",
   "publishConfig": {
     "access": "public"
   },
   "version": "1.3.1",
-  "homepage": "https://uniswap.org",
+  "homepage": "https://basex.fi",
   "keywords": [
+    "basex",
+    "basex.fi",
     "uniswap",
-    "v2",
     "v3"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/swap-router-contracts"
+    "url": "https://github.com/basex-fi/swap-router-contracts"
   },
   "files": [
     "contracts/base",
